<resources>
    <string name="app_name">MyLocalization</string>
    <string name="app_tittle">MyLocalization</string>

    <string name="form_text">fill in this form to register as user</string>
    <string name="form_name">FUll name</string>
    <string name="form_email">address email</string>
    <string name="form_phone">phone</string>
    <string name="form_pwd">Password</string>


    <string name="btn_go">Submit</string>
    <string name="btn_lang">definer</string>
</resources>
